# android-image-cc

./: .editorconfig  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: codeql-analysis.yml
app/: build.gradle
app/src/androidTest/java/com/thefrodo/image/jpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/thefrodo/image/jpeg/: MainActivity.kt
app/src/main/java/com/thefrodo/image/samples/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/thefrodo/image/jpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
image-jni/: build.gradle
image-jni/src/androidTest/java/com/thefrodo/image/heif/: LibHeif.kt
image-jni/src/androidTest/java/com/thefrodo/image/jpeg/: LibJpegTest.kt
image-jni/src/androidTest/java/com/thefrodo/image/png/: LibPngTest.kt
image-jni/src/main/: AndroidManifest.xml
image-jni/src/main/cpp/: CMakeLists.txt
image-jni/src/main/cpp/heif/: CMakeLists.txt
image-jni/src/main/cpp/jpeg/: frdjpeg.c  frdjpeg.h  frdjpegreader.c  frdjpegwriter.c  libjpeg-jni.c
image-jni/src/main/cpp/libjpeg/: CMakeLists.txt  frdjpeg.h  frdjpegreader.c  frdtools.c  libjpeg-jni.c
image-jni/src/main/cpp/libpng/: CMakeLists.txt  libpng.c
image-jni/src/main/cpp/libwebp/: cwebp.c
image-jni/src/main/cpp/webp/: CMakeLists.txt
image-jni/src/main/cpp/zlib/: CMakeLists.txt
image-jni/src/main/java/com/thefrodo/image/: FrdImage.kt  package-info.kt
image-jni/src/main/java/com/thefrodo/image/jpeg/: IsJpeg.kt  LibJpeg.kt  package-info.kt
image-jni/src/main/java/com/thefrodo/image/png/: LibPng.kt
image-jni/src/main/java/com/thefrodo/image/webp/: LibWebp.kt
images/assets/: Growing.heic
scripts/: spotless.gradle
